miniextendr-macros/tests/ui/derive_dataframe_option_field.stderr
error: DataFrameRow does not support `Option<…>` directly as a field type. Use `#[dataframe(as_list)]` to opt into an explicit opaque list-column, or unwrap to the inner type (e.g. store the inner value directly, using a sentinel / empty collection for the absent case).
 --> tests/ui/derive_dataframe_option_field.rs:9:13
  |
9 |     counts: Option<HashMap<String, i32>>,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
